--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,6 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=ExamplePlugin
+displayName=Wilderness Map Locations
+author=DapperMickie
+support=https://github.com/dappermickie/wilderness-map-locations
+description=Shows all locations in the wilderness, either on the map or shows the closest locations
+tags=wilderness,locations,worldmap,map,world,overlay
+plugins=com.github.dappermickie.wildernessmaplocations.WildernessMapLocationsPlugin
